--- a/StudentskaSluzba/StudentskaSluzba/View/CreatePredmet.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/CreatePredmet.xaml
@@ -5,8 +5,51 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentskaSluzba.View"
         mc:Ignorable="d"
-        Title="CreatePredmet" Height="450" Width="800">
+        Title="Dodavanje predmeta" Height="425" Width="400"
+        WindowStartupLocation="CenterScreen" >
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="400"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" Grid.Column="0" Width="300" Height="330">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="0" Grid.Column="0" Height="30">Naziv</Label>
+            <Label Grid.Row="1" Grid.Column="0" Height="30">Šifra</Label>
+            <Label Grid.Row="2" Grid.Column="0" Height="30">Semestar</Label>
+            <Label Grid.Row="3" Grid.Column="0" Height="30">Godina</Label>
+            <Label Grid.Row="4" Grid.Column="0" Height="30">ESPB</Label>
+            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Path=Naziv, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+            <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Path=Sifra, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+            <ListBox Grid.Row="2" Grid.Column="1" Height="30">
+                <ListBoxItem>Zimski</ListBoxItem>
+                <ListBoxItem>Letnji</ListBoxItem>
+            </ListBox>
+            <ListBox Grid.Row="3" Grid.Column="1" Height="30">
+                <ListBoxItem>I (Prva)</ListBoxItem>
+                <ListBoxItem>II (Druga)</ListBoxItem>
+                <ListBoxItem>III (Treca)</ListBoxItem>
+                <ListBoxItem>IV (Cetvrta)</ListBoxItem>
+            </ListBox>
+            <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding Path=ESPB, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+        </Grid>
+        <WrapPanel Grid.Row="1" FlowDirection="RightToLeft">
+            <Button Content="Odustani" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50, -30, 20, 5"/>
+            <Button Content="Potvrdi" IsDefault="True" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20, -30, 20, 5"/>
+        </WrapPanel>
     </Grid>
 </Window>
