--- a/StudentskaSluzba/StudentskaSluzba/View/CreateProfesor.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/CreateProfesor.xaml
@@ -5,8 +5,69 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentskaSluzba.View"
         mc:Ignorable="d"
-        Title="CreateProfesor" Height="450" Width="800">
+         Title="Dodavanje profesora" Height="600" Width="400">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="500"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" Grid.Column="0" Width="300" Height="500">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="0" Grid.Column="0" Height="30">Ime</Label>
+            <Label Grid.Row="1" Grid.Column="0" Height="30">Prezime</Label>
+            <Label Grid.Row="2" Grid.Column="0" Height="30">Datum rođenja</Label>
+            <Label Grid.Row="3" Grid.Column="0" Height="30">Adresa stanovanja</Label>
+            <Label Grid.Row="4" Grid.Column="0" Height="30">Kontakt telefon</Label>
+            <Label Grid.Row="5" Grid.Column="0" Height="30">E-mail</Label>
+            <Label Grid.Row="6" Grid.Column="0" Height="30">Adresa kancelarije</Label>
+            <Label Grid.Row="7" Grid.Column="0" Height="30">Zvanje</Label>
+            <Label Grid.Row="8" Grid.Column="0" Height="30">Godine staža</Label>
+            <Label Grid.Row="9" Grid.Column="0" Height="30">Broj lične karte</Label>
+            <Label Grid.Row="10" Grid.Column="0" Height="30">Katedra</Label>
+            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Path=Ime, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+            <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Path=Prezime, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+            <DatePicker Grid.Row="2" Grid.Column="1" Text="{Binding Path=DatumRodjenja, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></DatePicker>
+            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Path=AdresaStanovanja, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+            <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding Path=Telefon, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+            <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding Path=EmailAdresa, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+            <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding Path=AdresaKancelarije, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+            <TextBox Grid.Row="7" Grid.Column="1" Text="{Binding Path=Zvanje, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+            <TextBox Grid.Row="8" Grid.Column="1" Text="{Binding Path=GodineStaza, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+            <TextBox Grid.Row="9" Grid.Column="1" Text="{Binding Path=BrojLicne, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+            <TextBox Grid.Row="10" Grid.Column="1" Text="{Binding Path=Katedra, UpdateSourceTrigger=PropertyChanged}"
+                     Height="30"></TextBox>
+
+        </Grid>
+        <WrapPanel Grid.Row="1" FlowDirection="RightToLeft">
+            <Button Content="Odustani" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50, 20, 0, 5"/>
+            <Button Content="Potvrdi" IsDefault="True" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20, 20, 0, 5"/>
+        </WrapPanel>
     </Grid>
 </Window>
