--- a/StudentskaSluzba/StudentskaSluzba/View/CreateStudent.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/CreateStudent.xaml
@@ -5,8 +5,85 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentskaSluzba.View"
         mc:Ignorable="d"
-        Title="CreateStudent" Height="450" Width="800">
+        Title="CreateStudent" Height="600" Width="400">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+        </Grid.RowDefinitions>
         
+        <Grid Grid.Row="0" Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="0" Grid.Column="0" Height="30">Ime</Label>
+            <Label Grid.Row="1" Grid.Column="0" Height="30">Prezime</Label>
+            <Label Grid.Row="2" Grid.Column="0" Height="30">Indeks</Label>
+            <Label Grid.Row="3" Grid.Column="0" Height="30">Datum rođenja</Label>
+            <Label Grid.Row="4" Grid.Column="0" Height="30">Adresa stanovanja</Label>
+            <Label Grid.Row="5" Grid.Column="0" Height="30">Kontakt telefon</Label>
+            <Label Grid.Row="6" Grid.Column="0" Height="30">Email</Label>
+            <Label Grid.Row="7" Grid.Column="0" Height="30">Godina upisa</Label>
+            <Label Grid.Row="8" Grid.Column="0" Height="30">Trenutna godina studija</Label>
+            <Label Grid.Row="9" Grid.Column="0" Height="30">Status</Label>
+
+            <TextBox Grid.Row="0" Grid.Column="1" Height="20"></TextBox>
+            <TextBox Grid.Row="1" Grid.Column="1" Height="20"></TextBox>
+            <TextBox Grid.Row="2" Grid.Column="1" Height="20"></TextBox>
+            <DatePicker Grid.Row="3" Grid.Column="1" Height="25"></DatePicker>
+            <Grid Grid.Row="4" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" FontSize="10" HorizontalAlignment="Center" >Ulica</Label>
+                <Label Grid.Row="0" Grid.Column="1" FontSize="10" HorizontalAlignment="Center" >Broj</Label>
+                <Label Grid.Row="0" Grid.Column="2" FontSize="10" HorizontalAlignment="Center" >Grad</Label>
+                <Label Grid.Row="0" Grid.Column="3" FontSize="10" HorizontalAlignment="Center" >Država</Label>
+
+                <TextBox Grid.Row="1" Grid.Column="0"></TextBox>
+                <TextBox Grid.Row="1" Grid.Column="1"></TextBox>
+                <TextBox Grid.Row="1" Grid.Column="2"></TextBox>
+                <TextBox Grid.Row="1" Grid.Column="3"></TextBox>
+            </Grid>
+            <TextBox Grid.Row="5" Grid.Column="1" Height="20"></TextBox>
+            <TextBox Grid.Row="6" Grid.Column="1" Height="20"></TextBox>
+            <TextBox Grid.Row="7" Grid.Column="1" Height="20"></TextBox>
+            <ListBox Grid.Row="8" Grid.Column="1" Height="25">
+                <ListBoxItem FontSize="10">I (prva)</ListBoxItem>
+                <ListBoxItem>II (druga)</ListBoxItem>
+                <ListBoxItem>III (treća)</ListBoxItem>
+                <ListBoxItem>IV (četvrta)</ListBoxItem>
+            </ListBox>
+            <ListBox Grid.Row="9" Grid.Column="1" Height="25" FontSize="10">
+                <ListBoxItem>Budžet</ListBoxItem>
+                <ListBoxItem>Samofinansiranje</ListBoxItem>
+            </ListBox>
+        </Grid>
+        <WrapPanel Grid.Row="1" FlowDirection="RightToLeft">
+            <Button Content="Cancel" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top"
+                    Margin="20, 5, 20, 5"/>
+            <Button Content="Create" IsDefault="True" HorizontalAlignment="Left" VerticalAlignment="Top"
+                    Margin="20, 5, 20, 5"/>
+        </WrapPanel>
     </Grid>
 </Window>
